Revert "Make parser Java 8 compatible"
This reverts commit 93d9fe53