@@ -1,7 +1,6 @@
 package io.jafar.utils;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
@@ -91,7 +90,7 @@ public final class TypeGenerator {
                 try {
                     Path target = output.resolve("JFR" + getSimpleName(et.getName()) + ".java");
                     if (overwrite || !Files.exists(target)) {
-                        Files.write(target, generateTypeFromEvent(et, generated).getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE_NEW);
+                        Files.writeString(target, generateTypeFromEvent(et, generated), StandardOpenOption.CREATE_NEW);
                     }
                 } catch (IOException e) {
                     throw new RuntimeException("Failed to generate type interface for " + et.getName(), e);
@@ -137,7 +136,7 @@ public final class TypeGenerator {
             String targetName = isPrimitiveName(typeName) ? typeName : "JFR" + getSimpleName(typeName);
             Path target = output.resolve(targetName + ".java");
             if (overwrite || !Files.exists(target)) {
-                Files.write(output.resolve(targetName + ".java"), data.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE_NEW);
+                Files.writeString(output.resolve(targetName + ".java"), data, StandardOpenOption.CREATE_NEW);
             }
         }
     }
@@ -202,7 +201,7 @@ public final class TypeGenerator {
         try {
             Path classFile = output.resolve(getClassName(metadataClass) + ".java");
             if (overwrite || !Files.exists(classFile)) {
-                Files.write(classFile, generateClass(metadataClass).getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE_NEW);
+                Files.writeString(classFile, generateClass(metadataClass), StandardOpenOption.CREATE_NEW);
             }
         } catch (IOException e) {
             throw new RuntimeException(e);
@@ -225,12 +224,10 @@ public final class TypeGenerator {
             }
             MetadataClass fldType = field.getType();
             while (fldType.isSimpleType()) {
-                fldType = fldType.getFields().get(0).getType();
+                fldType = fldType.getFields().getFirst().getType();
             }
             sb.append(getClassName(fldType));
-            for (int i = 0; i < Math.max(0, field.getDimension()); i++) {
-                sb.append("[]");
-            }
+            sb.append("[]".repeat(Math.max(0, field.getDimension())));
             sb.append(" ");
             sb.append(fldName).append("();\n");
 
